Basic functionality for the new ajax login flow appears to be working.

--- a/rs/templates/common_helpers/common_translations.html
+++ b/rs/templates/common_helpers/common_translations.html
@@ -7,3 +7,7 @@
 <div id="id-common_translations-empty_send_message" style="display:none;">
     {% trans  "You have not written a message. You must write something before sending it." %}
 </div>
+
+<div id="id-common_translations-invalid-input" style="display:none;">
+    {% trans "Invalid input" %}
+</div>
