Minor format and text changes affecting the new login process.

--- a/rs/static/css/site_common.css
+++ b/rs/static/css/site_common.css
@@ -455,6 +455,11 @@ table.cl-float-right {
         float: right;
 }
 
+.cl-verification-input td {
+    padding: 5px;
+    font-size: 14px;
+}
+
 .cl-nobold {
     font-weight: normal;
 }
