--- a/rs/templates/login_helpers/verification.html
+++ b/rs/templates/login_helpers/verification.html
@@ -19,16 +19,23 @@
         {% endblocktrans %}
     {% endif %}
 
-
+    <div class="cl-verification-input">
     <form method="POST" class="cl-submit-confirmation-code-form">
-        <input type="text" name="verification_username"
+    <table class="center">
+        <tr>
+        <td class="cl-td-right-align"><strong>{%trans "Username" %}:</strong></td>
+        <td>{{ verification_values_dict.verification_username }}</td>
+        <tr>
+        <td class="cl-td-right-align"><strong>{% trans "Code" %}:</strong></td>
+        <td><input type="text" name="secret_verification_code"
                class="cl-default-verification-input-text  cl-standard-textinput-width-px"
-               maxlength=50 title='{% trans "Username" %}' value="{{ verification_values_dict.verification_username }}" >
-        <input type="text" name="secret_verification_code"
-               class="cl-default-verification-input-text  cl-standard-textinput-width-px"
-               maxlength=10 title='{% trans "Verification Code" %}' value="{{ verification_values_dict.secret_verification_code }}">
-        <input class="cl-submit-verification-code-button" type="submit" value='{% trans "Activate account" %}!'>
+               maxlength=10 title='{% trans "Verification code" %}' value="{{ verification_values_dict.secret_verification_code }}">
+        </td>
+        <tr>
+        <td></td><td><input class="cl-submit-verification-code-button" type="submit" value='{% trans "Activate account" %}!'></td>
+    </table>
     </form>
+    </div>
     <div class="cl-warning-text-holder"></div>
 
     {% if verification_values_dict.verification_email %}
@@ -109,11 +116,10 @@ function handle_verification_code_input() {
 
             try {
                 $(".cl-warning-text-holder").html(''); // clear any old error message
-                var $username = $(this).find(".cl-default-verification-input-text[name=verification_username]");
                 var $secret_verification_code = $(this).find(".cl-default-verification-input-text[name=secret_verification_code]");
-                if (check_if_input_value_is_valid($username) && check_if_input_value_is_valid($secret_verification_code)) {
+                if (check_if_input_value_is_valid($secret_verification_code)) {
                     // only attempt submission of username and secret code if it appears that they might be valid
-                    var username = $username.val();
+                    var username = "{{ verification_values_dict.verification_username }}";
                     var secret_verification_code = $secret_verification_code.val();
                     var submit_verification_code_url = "{% url login.check_verification_and_authorize_user %}" ;
                     
