--- a/rs/templates/login_helpers/login.html
+++ b/rs/templates/login_helpers/login.html
@@ -111,7 +111,7 @@
                     } else {
                         var readable_object = JSON.stringify(post_response);
                         var error_html =  "handle_user_registration_form - unknown json response object: " + readable_object
-                        report_ajax_error("NA", "NA", error_html);
+                        report_ajax_error("NA", error_html, "handle_registered_login_form - success", "error");
                         show_fields_errors("login_fields", [], error_html);
                     }
                 },
@@ -123,7 +123,7 @@
                     } else {
                         error_html = "handle_registered_login_form - unknown error";
                     }
-                    report_ajax_error(textStatus, errorThrown, error_html);   
+                    report_ajax_error(textStatus, errorThrown, "handle_registered_login_form - error", "error");
                     show_fields_errors("login_fields", [], error_html);
 
                 }
