--- a/rs/templates/login_helpers/registration.html
+++ b/rs/templates/login_helpers/registration.html
@@ -99,7 +99,7 @@ function handle_user_registration_form() {
                     } else {
                         var readable_object = JSON.stringify(post_response);
                         var error_html = "handle_user_registration_form - unknown json response: " + readable_object;
-                        report_ajax_error("NA", "NA",  error_html);
+                        report_ajax_error("NA", error_html, "handle_user_registration_form - success", "error");
                         show_fields_errors("signup_fields", [], error_html);
                     }
                 },
@@ -113,7 +113,7 @@ function handle_user_registration_form() {
                         error_html = "handle_user_registration_form - unknown error";
                     }
                     show_fields_errors("login_fields", [], error_html);
-                    report_ajax_error(textStatus, errorThrown, error_html);                       
+                    report_ajax_error(textStatus, errorThrown, "handle_user_registration_form - error", "error");
                 }
             });
             // prevent normal page navigation upon form submission - this is the same as calling
@@ -121,7 +121,7 @@ function handle_user_registration_form() {
             return false;
         });
     } catch(err) {
-        report_try_catch_error( err, "handle_verification_code_input");
+        report_try_catch_error( err, "handle_verification_code_input", "error");
     }
 }
 
