--- a/rs/templates/login_helpers/verification.html
+++ b/rs/templates/login_helpers/verification.html
@@ -140,13 +140,13 @@ function handle_verification_code_input() {
                             } else {
                                 var readable_object = JSON.stringify(post_response);
                                 var error_html = "handle_verification_code_input - unknown json response: " + readable_object;
-                                report_ajax_error("NA", "NA",  error_html);
+                                report_ajax_error("NA", error_html, "handle_verification_code_input - success", "error");
                             }
                         },
                         error: function(jqXHR, textStatus, errorThrown) {
                             $(".cl-warning-text-holder").html('<strong><span class="cl-warning-text">Error</span></strong>');
                             var error_html = "handle_verification_code_input - unknown error - see logs";
-                            report_ajax_error(textStatus, errorThrown, error_html);
+                            report_ajax_error(textStatus, errorThrown, "handle_verification_code_input - error", "error");
                         }
                     });
                 } else {
@@ -154,7 +154,7 @@ function handle_verification_code_input() {
                             $('#id-common_translations-invalid-input').html() + '</span></strong>');
                 }
             } catch(err) {
-                report_try_catch_error( err, "handle_verification_code_input");
+                report_try_catch_error( err, "handle_verification_code_input", "error");
             }
 
             // prevent normal page navigation upon form submission - this is the same as calling
