Removed all references to password_verify. If they forget their password they can request a new one quite easily (using their email address)

--- a/rs/templates/landing_page.html
+++ b/rs/templates/landing_page.html
@@ -202,7 +202,7 @@
 
 
         var input_fields = ['username_email', 'username', 'sex', 'relationship_status',
-        'preference', 'age', 'password', 'password_verify', 'country', 'native_language', 'language_to_learn'];
+        'preference', 'age', 'password', 'country', 'native_language', 'language_to_learn'];
         var stored_input_fields = {};
 
         for (ix in input_fields) {
