--- a/rs/templates/login_helpers/registration.html
+++ b/rs/templates/login_helpers/registration.html
@@ -7,6 +7,7 @@
         {% blocktrans with app_name as app_name and minimum_registration_age as age %}
         I confirm that I am {{ age }} or older and that I have read and accept the terms and conditions for using {{ app_name }}
         {% endblocktrans %}
+        <br><br><div class="cl-center-text"><input type="button" value='{% trans "I agree" %}' class="cl-accept-terms"></div>
     </div>
 
     <input type=hidden name=login_type value=signup_fields>
@@ -40,6 +41,25 @@
 
 <script type="text/javascript">
 
+function show_terms_and_conditions(registration_ok_dict){
+    $('#id-show_accept_terms_dialog_box').dialog({
+        width: 500,
+        modal: true,
+        position: {
+            my: "center",
+            at: "center"
+        },
+        open: function(event, ui) {
+            $(".cl-accept-terms").button();
+            $(document).on('click', ".cl-accept-terms", function() {
+                // once thtey have accepted the terms, then we redirect them to the verification page.
+                self.location = window.location.pathname + "?show_verification=true&verification_username="+ registration_ok_dict['username'] +
+                                "&verification_email=" + registration_ok_dict['verification_email'];
+            })
+        }
+    });
+}
+
 
 function handle_location_changes() {
     // function to expand the locations menu as country and region are selected.
@@ -69,6 +89,7 @@ function handle_user_registration_form() {
     try {
         $("#id-submit-signup-form").submit(function(e) {
 
+            close_dialog_box_for_user_feedback();
             // prevent double clicks from being processed.
             $('#id-submit-signup-button').attr('disabled', 'disabled');
 
@@ -89,8 +110,7 @@ function handle_user_registration_form() {
                         // verification dialog box, which they can enter their "verification_code" in order to activate
                         // t heir account.
                         var registration_ok_dict = post_response["Registration_OK"];
-                        self.location = window.location.pathname + "?show_verification=true&verification_username="+ registration_ok_dict['username'] +
-                        "&verification_email=" + registration_ok_dict['verification_email'];
+                        show_terms_and_conditions(registration_ok_dict);
 
                     } else if ("Registration_Error" in post_response) {
                         registration_errors_dict = post_response["Registration_Error"];
