--- a/rs/templates/login_helpers/registration.html
+++ b/rs/templates/login_helpers/registration.html
@@ -5,7 +5,8 @@
 
     <div id="id-show_accept_terms_dialog_box" style="display:none;">
         {% blocktrans with app_name as app_name and minimum_registration_age as age %}
-        I confirm that I am {{ age }} or older and that I have read and accept the terms and conditions for using {{ app_name }}
+        I confirm that I am {{ age }} or older and that I have read and accept the <a class="cl-dialog_anchor"
+        href="/en/rs/terms/" target="_blank"> terms and conditions</a> for using {{ app_name }}
         {% endblocktrans %}
         <br><br><div class="cl-center-text"><input type="button" value='{% trans "I agree" %}' class="cl-accept-terms"></div>
     </div>
