--- a/rs/templates/login_helpers/verification.html
+++ b/rs/templates/login_helpers/verification.html
@@ -32,7 +32,7 @@
                maxlength=10 title='{% trans "Verification code" %}' value="{{ verification_values_dict.secret_verification_code }}">
         </td>
         <tr>
-        <td></td><td><input class="cl-submit-verification-code-button" type="submit" value='{% trans "Activate account" %}!'></td>
+        <td></td><td><input class="cl-submit-verification-code-button" type="submit" value='{% trans "Activate account!" %}'></td>
     </table>
     </form>
     </div>
